WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21708
REGRESSION(
r37622
): starting a debugging session in another Web Inspector does show any scripts
https://bugs.webkit.org/show_bug.cgi?id=21708
Summary
REGRESSION(r37622): starting a debugging session in another Web Inspector doe...
Timothy Hatcher
Reported
2008-10-17 09:28:48 PDT
Steps: 1) Start debugging a page in one window. 2) Start debugging a page in another window. Results: The second window Web Inspector is empty and shows no scripts.
Attachments
Proposed patch
(9.96 KB, patch)
2008-10-17 09:33 PDT
,
Timothy Hatcher
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2008-10-17 09:33:02 PDT
Created
attachment 24458
[details]
Proposed patch
Darin Adler
Comment 2
2008-10-17 09:37:18 PDT
Comment on
attachment 24458
[details]
Proposed patch + void didAddListener(Page* page = 0); + void didRemoveListener(Page* page = 0); Don't need the name "page" here for the argument. Seems unclear what the "0" value means. I guess it means "global listener", but that should be mentioned explicitly. r=me
Timothy Hatcher
Comment 3
2008-10-17 09:51:47 PDT
Landed in
r37656
. Removed the default arguments.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug